# dsa

./: .gitignore  README.md
flexio/: README.md  build.sh  meson.build  meson_options.txt
flexio/app/: app.h  meson.build  wod_app.c
flexio/device/: dev_context.c  dev_ver.h  dpacc_build.sh  meson.build  wod_dev.c  wod_dev.h
flexio/host/: context.c  context.h  mem.c  meson.build  mlx5.c
flexio/include/: common.h  meson.build  mlx5.h
