# SPDX-License-Identifier: Apache-2.0
# Copyright(c) 2024 Liu, Changcheng <changcheng.liu@aliyun.com>

option('flexio_include_path', type: 'string', value: '',
    description: 'flexio-sdk headers path')

option('flexio_lib_path', type: 'string', value: '',
    description: 'flexio-sdk libraries path')

option('mpi', type: 'string', value: '',
    description: 'MPI installation path')

option('verbose', type: 'boolean', value: false,
    description: 'verbose build')

option('enable_debug', type: 'boolean', value: false,
    description: 'Enable debug build')
